--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,15 @@
 *.so
 *.dylib
 
+.idea/
+
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+bin/
+out/
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
